link css and js to html

--- a/loginPage.html
+++ b/loginPage.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Login Page (AA) </title>
+    <link rel="stylesheet" href="loginPage.css">
 </head>
 
 <body>
+    <script defer src="loginPage.js"></script>
 
     <div id="div-left">  </div>
     <div id="div-right">  </div>
