--- a/loginPage.html
+++ b/loginPage.html
@@ -12,7 +12,15 @@
 <body>
     <script defer src="loginPage.js"></script>
 
-    <div id="div-left">  </div>
+    <div id="div-left">
+        <div id="login">
+            <input id="input-username" type="text">
+            <input id="input-password" type="password">
+            <input id="input-checkbox" type="checkbox">
+            <button id="login-btn"> Login </button>
+        </div>
+    </div>
+
     <div id="div-right">  </div>
 
 </body>
