create title and placeholders and label and btn register

--- a/loginPage.html
+++ b/loginPage.html
@@ -14,10 +14,13 @@
 
     <div id="div-left">
         <div id="login">
-            <input id="input-username" type="text">
-            <input id="input-password" type="password">
+            <p id="title"> Login </p>
+            <input id="input-username" placeholder="username" type="text">
+            <input id="input-password" placeholder="password" type="password">
+            <label id="labelCheckBox" for="checkbox"> Remember Me </label>
             <input id="input-checkbox" type="checkbox">
             <button id="login-btn"> Login </button>
+            <button id="register-btn"> Register </button>
         </div>
     </div>
 
