icon Eye added to input Pass

--- a/loginPage.html
+++ b/loginPage.html
@@ -16,6 +16,7 @@
         <div id="login">
             <p id="title"> Login </p>
             <input id="input-username" placeholder="username" type="text">
+            <img id="icon-eye" src="eye-outline.svg" alt="eye-icon">
             <input id="input-password" placeholder="password" type="password">
             <label id="labelCheckBox" for="checkbox"> Remember Me </label>
             <input id="input-checkbox" type="checkbox">
