update total Project

--- a/loginPage.html
+++ b/loginPage.html
@@ -14,18 +14,35 @@
 
     <div id="div-left">
         <div id="login">
-            <p id="title"> Login </p>
-            <input id="input-username" placeholder="username" type="text">
-            <img id="icon-eye" src="icon/eye-outline.svg" alt="eye-icon">
-            <input id="input-password" placeholder="password" type="password">
-            <label id="labelCheckBox" for="checkbox"> Remember Me </label>
-            <input id="input-checkbox" type="checkbox">
-            <button id="login-btn"> Login </button>
-            <button id="register-btn"> Register </button>
+            <section id="header-element">
+
+                <p id="title"> Login </p>
+                <input id="input-username" placeholder="username" type="text">
+                <input id="input-password" placeholder="password" type="password">
+                <img id="icon-eye" src="icon/eye-outline.svg" alt="eye-icon">
+                <button id="login-btn"> Login </button>
+                <button id="register-btn"> Register </button>
+
+            </section>
+            <section id="header-element2">
+
+                <p id="title" class="register-title"> Register </p>
+                <input id="input-username" class="input-username" placeholder="username" type="text">
+                <input id="input-email" class="input-email" placeholder="email" type="text">
+
+                <input id="input-password" placeholder="password" type="text">
+                <input id="input-password" placeholder="confrim password" type="text">
+
+                <label id="labelCheckBox" for="checkbox"> Remember Me </label>
+                <input id="input-checkbox" type="checkbox">
+                <button id="register-btn" class="register-btn2"> Register </button>
+                <button id="login-btn" class="login-btn2"> Login </button>
+
+            </section>
         </div>
     </div>
 
-    <div id="div-right">  </div>
+    <div id="div-right"> </div>
 
 </body>
 
